prevent scrollbar from appearing when buttons move out of viewport due to animation

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   min-height: 100%;
+  overflow: hidden;
 }
 
 .container-inner {
